--- a/Assets/Scripts/SaveSystem/Editor/SceneSaveableEditor.uxml
+++ b/Assets/Scripts/SaveSystem/Editor/SceneSaveableEditor.uxml
@@ -2,6 +2,7 @@
   <ui:VisualElement name="row">
     <ui:Label name="top-label" text="Save object" style="font-style: bold; margin-top: 5"/>
     <ue:PropertyField binding-path="saveableID" name="save-id-field" />
+    <ue:PropertyField binding-path="loadAfterStart" name="delayed-load-field" tooltip="Should Load be called on ISaveables after or before start?"/>
     <ue:PropertyField binding-path="saveTransform" name="save-transform-field" />
   </ui:VisualElement>
 </UXML>
